--- a/style.css
+++ b/style.css
@@ -194,17 +194,43 @@ body {
   border: none;
 }
 
-@media screen and (max-width: 400px) {
-    .container {
+@media (max-width: 1200px) {
+    .card, .card2, .card3 {
+        max-width: 600px;
+    }
+    .box {
+        width: 30%;
+    }
+}
+
+@media (max-width: 992px) {
+    .topcard, .bottomcard {
+        flex-direction: column;
+    }
+    .box {
+        width: 45%;
+    }
+}
+
+@media (max-width: 768px) {
+    body {
+        font-size: 100%;
+    }
+    .card, .card2, .card3 {
+        padding: 1em;
+    }
+    .box {
         width: 100%;
-        border-radius: 0;
+        margin-bottom: 1em;
     }
+}
 
-    header, main, footer {
-        padding: 15px;
+@media (max-width: 576px) {
+    .card, .card2, .card3 {
+        padding: 0.5em;
     }
-
-    footer {
-        font-size: 14px;
+    .box {
+        width: 100%;
+        margin-bottom: 0.5em;
     }
 }
